--- a/app/src/main/res/layout/activity_edit_birthday.xml
+++ b/app/src/main/res/layout/activity_edit_birthday.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.linute.linute.MainContent.Settings.EditBirthday">
+    tools:context=".MainContent.Settings.EditBirthdayActivity">
 
     <include android:id="@+id/editbirthday_toolbar"
              layout="@layout/tool_bar"/>
