--- a/app/src/main/res/layout/activity_edit_name.xml
+++ b/app/src/main/res/layout/activity_edit_name.xml
@@ -30,6 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/first_name_hint"
+                android:gravity="center"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:textSize="14sp"/>
@@ -48,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/last_name_hint"
                 android:maxLines="1"
+                android:gravity="center"
                 android:singleLine="true"
                 android:textSize="14sp"/>
 
