--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -5,12 +5,15 @@
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:elevation="4dp"
-    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
+    android:id="@+id/mainactivity_toolbar">
 
     <TextView
         android:id="@+id/toolbar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:textSize="18sp"
+        android:textAppearance="@android:style/TextAppearance.Medium"/>
 
 </android.support.v7.widget.Toolbar>
