--- a/app/src/main/res/xml/pref_profile_frag_main.xml
+++ b/app/src/main/res/xml/pref_profile_frag_main.xml
@@ -39,7 +39,8 @@
 
     <PreferenceCategory>
         <Preference android:key="logout"
-                    android:title="Log Out"/>
+                    android:title="Log Out"
+            />
     </PreferenceCategory>
 
 </PreferenceScreen>
