--- a/app/src/main/res/layout/activity_change_profile_image.xml
+++ b/app/src/main/res/layout/activity_change_profile_image.xml
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include android:id="@+id/changeprofileimage_toolbar"
-             layout="@layout/tool_bar"/>
-
-    <com.mikhaellopez.circularimageview.CircularImageView
+    <ImageView
         android:id="@+id/changeprofileimage_image"
         android:layout_width="@dimen/changeprofile_image_dimen"
         android:layout_height="@dimen/changeprofile_image_dimen"
-        android:layout_below="@id/changeprofileimage_toolbar"
-        android:layout_marginTop="65dp"
-        app:border_color="@android:color/darker_gray"
-        app:border_width="1dp"
+        android:layout_marginTop="0dp"
         android:layout_centerHorizontal="true"
         android:scaleType="fitCenter"/>
 
@@ -23,21 +16,20 @@
                   android:layout_height="wrap_content"
                   android:layout_below="@id/changeprofileimage_image"
                   android:layout_marginTop="50dp"
-                  android:weightSum="2"
-                  android:orientation="horizontal"
+                  android:layout_marginLeft="35dp"
+                  android:layout_marginRight="35dp"
+                  android:orientation="vertical"
                   android:id="@+id/changeprofileimage_buttons">
 
-        <Button android:id="@+id/changeprofileimage_cancel_button"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:text="Cancel"
-                android:layout_weight="1"/>
-
         <Button android:id="@+id/changeprofileimage_save_button"
-                android:layout_width="0px"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Save Changes"
-                android:layout_weight="1"/>
+                android:text="Save Changes"/>
+
+        <Button android:id="@+id/changeprofileimage_cancel_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Cancel"/>
     </LinearLayout>
 
     <ProgressBar
