--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,14 @@
             layout="@layout/tool_bar"
             android:id="@+id/mainactivity_toolbar"/>
 
+        <!--add tabs -->
+        <com.linute.linute.MainContent.SlidingTab.SlidingTabLayout
+            android:id="@+id/mainactivity_tabbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"/>
+
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main"/>
@@ -27,6 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_menu_add"/>
+        android:src="@android:drawable/ic_menu_add"
+        app:borderWidth="0dp"
+        app:layout_behavior="com.linute.linute.UtilsAndHelpers.ScrollingFABBehavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
