--- a/app/src/main/res/layout/events_discover.xml
+++ b/app/src/main/res/layout/events_discover.xml
@@ -2,7 +2,6 @@
 <android.support.v7.widget.CardView
     android:id="@+id/card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,21 +28,29 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:layout_marginTop="2dp"
             android:layout_below="@+id/question"
+            android:layout_marginTop="2dp"
             android:background="@drawable/college_walk1"
             android:scaleType="centerCrop"/>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="top|center_horizontal">
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/eventUserImage"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:scaleType="centerCrop"
             android:src="@drawable/college_walk1"
-            app:border_color="#EEEEEE"
-            app:border_width="3dp"
-            app:shadow="false"
-            app:shadow_color="#8BC34A"
-            app:shadow_radius="10"/>
-    </RelativeLayout>
+            card_view:border="false"
+            card_view:border_color="#EEEEEE"
+            card_view:border_width="0dp"
+            card_view:shadow="false"
+            card_view:shadow_color="#8BC34A"
+            card_view:shadow_radius="10"/>
+    </LinearLayout>
+
 </android.support.v7.widget.CardView>
