--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -3,10 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
     android:elevation="4dp"
     android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
-    android:id="@+id/mainactivity_toolbar">
+    android:id="@+id/mainactivity_toolbar"
+    app:layout_scrollFlags="scroll|enterAlways">
 
     <TextView
         android:id="@+id/toolbar_title"
