--- a/app/src/main/res/layout/activity_change_profile_image.xml
+++ b/app/src/main/res/layout/activity_change_profile_image.xml
@@ -4,22 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+
+    <com.linute.linute.UtilsAndHelpers.SquareImageView
         android:id="@+id/changeprofileimage_image"
-        android:layout_width="@dimen/changeprofile_image_dimen"
-        android:layout_height="@dimen/changeprofile_image_dimen"
-        android:layout_marginTop="0dp"
-        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="100dp"
         android:scaleType="fitCenter"/>
 
-    <LinearLayout android:layout_width="match_parent"
+    <LinearLayout android:id="@+id/changeprofileimage_buttons"
+                  android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/changeprofileimage_image"
-                  android:layout_marginTop="50dp"
                   android:layout_marginLeft="35dp"
                   android:layout_marginRight="35dp"
-                  android:orientation="vertical"
-                  android:id="@+id/changeprofileimage_buttons">
+                  android:layout_marginTop="50dp"
+                  android:orientation="vertical">
 
         <Button android:id="@+id/changeprofileimage_save_button"
                 android:layout_width="match_parent"
@@ -37,10 +39,9 @@
         style="?android:attr/progressBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/changeprofileimage_image"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:layout_below="@id/changeprofileimage_image"
         android:visibility="gone"/>
-
 
 </RelativeLayout>
