--- a/app/src/main/res/layout/activity_edit_birthday.xml
+++ b/app/src/main/res/layout/activity_edit_birthday.xml
@@ -19,26 +19,11 @@
         android:spinnersShown="true"/>
 
 
-    <LinearLayout android:id="@+id/editbirthday_buttons"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_below="@id/editbirthday_datepicker"
-                  android:layout_marginTop="35dp"
-                  android:orientation="horizontal"
-                  android:weightSum="2">
-
-        <Button android:id="@+id/editbirthday_cancel_button"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Cancel"/>
-
-        <Button android:id="@+id/editbirthday_save_button"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Save Changes"/>
-    </LinearLayout>
+    <Button android:id="@+id/editbirthday_save_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:text="Save Changes"/>
 
     <ProgressBar
         android:id="@+id/editbirthday_progressbar"
