--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,8 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <include
-            layout="@layout/tool_bar"
-            android:id="@+id/mainactivity_toolbar"/>
+            android:id="@+id/mainactivity_toolbar"
+            layout="@layout/tool_bar"/>
 
         <!--add tabs -->
         <com.linute.linute.MainContent.SlidingTab.SlidingTabLayout
@@ -27,13 +27,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/viewPagerContainer">
-
-        <include layout="@layout/content_main"/>
-    </FrameLayout>
+    <include layout="@layout/content_main"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
