--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar
+    android:id="@+id/mainactivity_toolbar"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:elevation="4dp"
     android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
-    android:id="@+id/mainactivity_toolbar"
     app:layout_scrollFlags="scroll|enterAlways">
 
     <TextView
@@ -16,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="18sp"
-        android:textAppearance="@android:style/TextAppearance.Medium"/>
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textSize="18sp"/>
 
 </android.support.v7.widget.Toolbar>
