--- a/app/src/main/res/layout/events_discover2.xml
+++ b/app/src/main/res/layout/events_discover2.xml
@@ -14,8 +14,6 @@
         android:layout_marginTop="-25dp"
         android:background="#ffffff"/>
 
-
-
     <TextView
         android:id="@+id/postText"
         android:layout_width="match_parent"
@@ -24,21 +22,22 @@
         android:gravity="center"
         android:textSize="14sp"/>
 
-    <ImageView
-        android:id="@+id/postPicture"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_below="@+id/postTopBorder"
-        android:background="@drawable/college_walk1"
-        android:scaleType="centerCrop"/>
-
     <!--<ImageView-->
+    <!--android:id="@+id/postPicture"-->
     <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_height="300dp"-->
     <!--android:layout_below="@+id/postTopBorder"-->
-    <!--android:adjustViewBounds="true"-->
     <!--android:background="@drawable/college_walk1"-->
-    <!--android:scaleType="fitCenter"/>-->
+    <!--android:scaleType="centerCrop"/>-->
+
+    <ImageView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/postPicture"
+    android:layout_below="@+id/postTopBorder"
+    android:adjustViewBounds="true"
+    android:background="@drawable/college_walk1"
+    android:scaleType="fitCenter"/>
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/eventUserImage"
@@ -67,29 +66,30 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:id="@+id/likesRelativeLayout"
         android:layout_above="@+id/postBottomBorder"
         android:orientation="horizontal"
         android:layout_alignTop="@+id/postBottomBorder">
 
-        <ImageView
-            android:id="@+id/postLikes"
+        <CheckBox
+            android:id="@+id/postLikesHeart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/heart"
+            android:button="@drawable/post_likes_selector"
             android:layout_centerVertical="true"/>
 
         <TextView
             android:id="@+id/postLikesNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/postLikes"
-            android:layout_toRightOf="@id/postLikes"
+            android:layout_toEndOf="@+id/postLikesHeart"
+            android:layout_toRightOf="@id/postLikesHeart"
             android:layout_centerVertical="true"
             android:paddingEnd="4dp"
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
             android:paddingStart="4dp"
-            android:text="7"
+            android:text="0"
             android:textAppearance="@android:style/TextAppearance.Small"
             android:textColor="#FFFFFF"/>
     </RelativeLayout>
