--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,4 +12,10 @@
 
     </style>
 -->
+
+    <!--<style name="PostDialog" parent="android:Theme.Dialog" >-->
+        <!--<item name="android:windowNoTitle">false</item>-->
+        <!--<item name="android:windowFullscreen">true</item>-->
+        <!--<item name="android:windowIsFloating">false</item>-->
+    <!--</style>-->
 </resources>
