--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,10 @@
         <item name="android:colorBackground">#000000</item>
     </style>
 
+    <!--<style name="PostDialog" parent="android:Theme.Dialog" >-->
+        <!--<item name="android:windowNoTitle">false</item>-->
+        <!--<item name="android:windowFullscreen">false</item>-->
+        <!--<item name="android:windowIsFloating">false</item>-->
+    <!--</style>-->
+
 </resources>
