--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -1,27 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/discoverFragmentLayout"
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipe_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#bfbfbf"
-    android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/postBox"
+    <RelativeLayout
+        android:id="@+id/discoverFragmentLayout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
-        android:background="#FFFFFF"
-        android:ems="10"
-        android:hint="Write something about your college..."
-        android:inputType="textMultiLine"/>
+        android:layout_height="match_parent"
+        android:background="#bfbfbf"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/eventList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/postBox"/>
+        <EditText
+            android:id="@+id/postBox"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:background="#FFFFFF"
+            android:ems="10"
+            android:hint="Write something about your college..."
+            android:inputType="textMultiLine"/>
 
-</RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/eventList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/postBox"/>
+
+    </RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
