worked on Camera

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,4 +12,8 @@
 
     </style>
 -->
+
+    <style name="squarecamera__CameraFullScreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+    </style>
 </resources>
