--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,13 @@
     <color name="colorPrimaryDark">#E64A19</color>
     <color name="colorAccent">#3F51B5</color>
     <color name="tabsScrollColor">#8a140e</color>
+
+
+    <!--square camera values -->
+    <color name="squarecamera__red">#F0001D</color>
+    <color name="squarecamera__pressed_red">#B3F0001D</color>
+    <color name="squarecamera__white">#FFFFFF</color>
+    <color name="squarecamera__pressed_white">#99FFFFFF</color>
+    <color name="primary_material_light">#b2aead</color>
+    <color name="background_material_light">#d7a5a5</color>
 </resources>
