--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,12 @@
     <!--<dimen name="changeprofile_image_dimen">180dp</dimen> -->
     <dimen name="padding_s">4dp</dimen>
 
+
+
+    <!-- Square Camera -->
+    <dimen name="squarecamera__activity_horizontal_margin">16dp</dimen>
+    <dimen name="squarecamera__activity_vertical_margin">16dp</dimen>
+    <dimen name="squarecamera__cover_start_height">300dp</dimen>
+    <dimen name="squarecamera__cover_start_width">250dp</dimen>
+
 </resources>
