New Feed and small updates

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF5722</color>
-    <color name="colorPrimaryDark">#E64A19</color>
-    <color name="colorAccent">#3F51B5</color>
+    <color name="colorPrimary">#051b2e</color>
+    <color name="colorPrimaryDark">#051e33</color>
+    <color name="colorAccent">#1d4261</color>
     <color name="tabsScrollColor">#8a140e</color>
 
 
