--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,12 +37,12 @@
 
         <include layout="@layout/content_main"/>
 
-
-        <android.support.design.widget.FloatingActionButton
+        <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
+            android:layout_marginBottom="15dp"
             android:src="@android:drawable/ic_menu_add"
             app:borderWidth="0dp"
             app:layout_behavior="com.linute.linute.UtilsAndHelpers.ScrollingFABBehavior"/>
