--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,7 @@
     <dimen name="squarecamera__cover_start_height">300dp</dimen>
     <dimen name="squarecamera__cover_start_width">250dp</dimen>
 
+
+    <dimen name="post_side_padding">15dp</dimen>
+
 </resources>
