--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
 
 
     <!-- Square Camera -->
+    <dimen name="squarecam_edit_frag_default_height">60dp</dimen>
     <dimen name="squarecamera__activity_horizontal_margin">16dp</dimen>
     <dimen name="squarecamera__activity_vertical_margin">16dp</dimen>
     <dimen name="squarecamera__cover_start_height">300dp</dimen>
