--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:elevation="4dp"
-    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
+    android:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar"
     app:layout_scrollFlags="scroll|enterAlways">
 
     <TextView
