--- a/app/src/main/res/layout/fragment_profile_header2.xml
+++ b/app/src/main/res/layout/fragment_profile_header2.xml
@@ -7,61 +7,72 @@
               android:orientation="vertical">
 
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="150dp">
 
+        <ImageView
+            android:id="@+id/profile_blur_back"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitCenter"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <com.mikhaellopez.circularimageview.CircularImageView
-                android:id="@+id/profilefrag_prof_image"
-                android:layout_width="@dimen/profilefragment_main_profile_image_radius"
-                android:layout_height="75dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="25dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/profile_picture_placeholder"
-                app:border_color="@android:color/darker_gray"
-                app:border_width="1dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="20dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginTop="25dp"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/profilefrag_status"
+                <com.mikhaellopez.circularimageview.CircularImageView
+                    android:id="@+id/profilefrag_prof_image"
+                    android:layout_width="@dimen/profilefragment_main_profile_image_radius"
+                    android:layout_height="75dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="25dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/profile_picture_placeholder"
+                    app:border_color="@android:color/darker_gray"
+                    app:border_width="1dp"/>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="6dp"
-                    android:maxLines="3"
-                    android:textSize="13dp"/>
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginEnd="25dp"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="25dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/profilefrag_status"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="6dp"
+                        android:maxLines="3"
+                        android:textSize="13dp"/>
+                </LinearLayout>
+
+
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-    </LinearLayout>
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
