--- a/app/src/main/res/layout/fragment_profile_header2.xml
+++ b/app/src/main/res/layout/fragment_profile_header2.xml
@@ -8,14 +8,16 @@
 
 
     <FrameLayout
+        android:id="@+id/profile_blur_frame"
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="175dp">
 
         <ImageView
             android:id="@+id/profile_blur_back"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter"/>
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,8 +32,8 @@
 
                 <com.mikhaellopez.circularimageview.CircularImageView
                     android:id="@+id/profilefrag_prof_image"
-                    android:layout_width="@dimen/profilefragment_main_profile_image_radius"
-                    android:layout_height="75dp"
+                    android:layout_width="85dp"
+                    android:layout_height="85dp"
                     android:layout_marginBottom="20dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
@@ -69,7 +71,10 @@
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginStart="30dp"
+                    android:text="FOLLOW"/>
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
