--- a/app/src/main/res/layout/list_item_profile_frag.xml
+++ b/app/src/main/res/layout/list_item_profile_frag.xml
@@ -4,13 +4,12 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                tools:background="@android:color/holo_red_light"
-    >
+                android:orientation="vertical">
 
-    <LinearLayout android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/profilelistitem_prof_image"
@@ -25,27 +24,33 @@
             app:border_color="@android:color/darker_gray"
             app:border_width="1dp"/>
 
-        <LinearLayout android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_gravity="center_vertical"
-                      android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical">
 
-            <TextView android:id="@+id/profilelistitem_name"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:textColor="@android:color/holo_blue_dark"
-                      tools:text="FirstName LastName"
+            <TextView
+                android:id="@+id/profilelistitem_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_blue_dark"
+                tools:text="FirstName LastName"
                 />
-            <TextView android:id="@+id/profilelistitem_description"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      tools:text="attended an event"
+
+            <TextView
+                android:id="@+id/profilelistitem_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="attended an event"
                 />
-            <TextView android:id="@+id/profilelistitem_time"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:textColor="@android:color/darker_gray"
-                      tools:text="1 month ago"/>
+
+            <TextView
+                android:id="@+id/profilelistitem_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/darker_gray"
+                tools:text="1 month ago"/>
 
         </LinearLayout>
 
@@ -57,7 +62,8 @@
         android:layout_height="@dimen/profilefragment_list_item_event_side"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="15dp" android:scaleType="fitCenter"
+        android:layout_marginRight="15dp"
+        android:scaleType="fitCenter"
         android:src="@drawable/no_image_placeholder"/>
 
 
