--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -38,6 +38,7 @@
                   android:paddingTop="5dp"
                   android:singleLine="true"
                   android:textColor="@android:color/white"
+                  android:visibility="gone"
             />
 
     </RelativeLayout>
