--- a/app/src/main/res/layout/activity_linute_sign_up.xml
+++ b/app/src/main/res/layout/activity_linute_sign_up.xml
@@ -48,6 +48,7 @@
                     android:id="@+id/signup_fname_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:maxLength="16"
                     android:hint="@string/first_name_hint"
                     android:maxLines="1"
                     android:singleLine="true"
@@ -65,6 +66,7 @@
                     android:id="@+id/signup_lname_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:maxLength="16"
                     android:hint="@string/last_name_hint"
                     android:maxLines="1"
                     android:singleLine="true"
