--- a/app/src/main/res/layout/activity_edit_name.xml
+++ b/app/src/main/res/layout/activity_edit_name.xml
@@ -32,6 +32,7 @@
                 android:gravity="center"
                 android:hint="@string/first_name_hint"
                 android:maxLines="1"
+                android:maxLength="16"
                 android:singleLine="true"
                 android:textSize="14sp"/>
         </android.support.design.widget.TextInputLayout>
@@ -50,6 +51,7 @@
                 android:gravity="center"
                 android:hint="@string/last_name_hint"
                 android:maxLines="1"
+                android:maxLength="16"
                 android:singleLine="true"
                 android:textSize="14sp"/>
 
